Custom CSS in proper spot + Almost done designing
So I've designed on a design for the videos. I just need to grab all the links and images to add to the static page and this will be done.

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,6 +19,7 @@
 
     <!-- Global Custom CSS -->
     <link type="text/css" href="assets/css/global-custom.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -190,43 +191,39 @@
 
               <div class="row justify-content-center text-center mb-sm">
                 <div class="col-lg-4">
-                    <img class ="video-thumbnail" src="https://i3.ytimg.com/vi/<swap-out>/hqdefault.jpg">
+                  <img class="video-thumbnail" src="https://i3.ytimg.com/vi/yyfG8lLeN6U/hqdefault.jpg">
+                  <h3>IEEEXtreme Preparatory sesstion with Chethiya</h3>
+                  <a href="https://www.youtube.com/watch?v=yyfG8lLeN6U" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Watch</a>
                 </div>
-                <div class="col-lg-6">
-                  <a href="<add-link>"><p></p></a>
+                <div class="col-lg-4">
+                  <img class="video-thumbnail" src="https://i3.ytimg.com/vi/yyfG8lLeN6U/hqdefault.jpg">
+                  <h3>IEEEXtreme Preparatory sesstion with Chethiya</h3>
+                  <a href="https://www.youtube.com/watch?v=yyfG8lLeN6U" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Watch</a>
                 </div>
-            </div>
+                <div class="col-lg-4">
+                  <img class="video-thumbnail" src="https://i3.ytimg.com/vi/yyfG8lLeN6U/hqdefault.jpg">
+                  <h3>IEEEXtreme Preparatory sesstion with Chethiya</h3>
+                  <a href="https://www.youtube.com/watch?v=yyfG8lLeN6U" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Watch</a>
+                </div>
+              </div>
             -->
             <!-- Video Entry-->
             <div class="row justify-content-center text-center mb-sm">
-                <div class="col-lg-3">
-                  <div class="row"><img class ="video-thumbnail" src="https://i3.ytimg.com/vi/yyfG8lLeN6U/hqdefault.jpg"></div>
-                  <div class="row"><h3>IEEEXtreme Preparatory sesstion with Chethiya</h3></div>
-                  <div class="row"><a href="https://www.youtube.com/watch?v=yyfG8lLeN6U" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Watch</a></div>
+                <div class="col-lg-4">
+                  <img class="video-thumbnail" src="https://i3.ytimg.com/vi/yyfG8lLeN6U/hqdefault.jpg">
+                  <a href="https://www.youtube.com/watch?v=yyfG8lLeN6U"><p class="lead">IEEEXtreme Preparatory sesstion with Chethiya</p></a>
                 </div>
-                <div class="col-lg-3">
-                  <div class="row"><img class ="video-thumbnail" src="https://i3.ytimg.com/vi/yyfG8lLeN6U/hqdefault.jpg"></div>
-                  <div class="row"><h3>IEEEXtreme Preparatory sesstion with Chethiya</h3></div>
-                  <div class="row"><a href="https://www.youtube.com/watch?v=yyfG8lLeN6U" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Watch</a></div>
+                <div class="col-lg-4">
+                  <img class="video-thumbnail" src="https://i3.ytimg.com/vi/_XLT9b5Pggw/hqdefault.jpg">
+                  <a href="https://www.youtube.com/watch?v=_XLT9b5Pggw"><p class="lead">Youth Enterpreneurship with Shadir Hisham</p></a>
                 </div>
-                <div class="col-lg-3">
-                  <div class="row"><img class ="video-thumbnail" src="https://i3.ytimg.com/vi/yyfG8lLeN6U/hqdefault.jpg"></div>
-                  <div class="row"><h3>IEEEXtreme Preparatory sesstion with Chethiya</h3></div>
-                  <div class="row"><a href="https://www.youtube.com/watch?v=yyfG8lLeN6U" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Watch</a></div>
-                </div>
-                <div class="col-lg-3">
-                  <div class="row"><img class ="video-thumbnail" src="https://i3.ytimg.com/vi/yyfG8lLeN6U/hqdefault.jpg"></div>
-                  <div class="row"><h3>IEEEXtreme Preparatory sesstion with Chethiya</h3></div>
-                  <div class="row"><a href="https://www.youtube.com/watch?v=yyfG8lLeN6U" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Watch</a></div>
+                <div class="col-lg-4">
+                  <img class="video-thumbnail" src="https://i3.ytimg.com/vi/aXwmVlL9glc/hqdefault.jpg">
+                  <a href="https://www.youtube.com/watch?v=aXwmVlL9glc"><p class="lead">Design Thinking</p></a>
                 </div>
             </div>
             <!-- * -->
             <div class="row justify-content-center text-center mb-sm">
-                <div class="col-lg-3">
-                  <div class="row"><img class ="video-thumbnail" src="https://i3.ytimg.com/vi/yyfG8lLeN6U/hqdefault.jpg"></div>
-                  <div class="row"><h3>IEEEXtreme Preparatory sesstion with Chethiya</h3></div>
-                  <div class="row"><a href="https://www.youtube.com/watch?v=yyfG8lLeN6U" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Watch</a></div>
-                </div>
                 <div class="col-lg-3">
                   <div class="row"><img class ="video-thumbnail" src="https://i3.ytimg.com/vi/yyfG8lLeN6U/hqdefault.jpg"></div>
                   <div class="row"><h3>IEEEXtreme Preparatory sesstion with Chethiya</h3></div>
